--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="navbar-center">
                     <button class="flex items-center gap-4">
-                        <img class="w-14 lg:w-[54px]" src="./images/logo.png" alt="" />
+                        <img class="w-14 lg:w-[54px]" src="./images/logo.png" alt="#" />
                         <h2 class="font-bold text-[2.5rem] text-black md:text-white">
                             Fruit Burst
                         </h2>
@@ -55,7 +55,6 @@
                                     <i class=" text-xl fa-solid fa-magnifying-glass"></i>
                                 </button>
                             </div>
-
                         </ul>
                     </div>
                 </div>
@@ -604,6 +603,36 @@
     </main>
 
 
+    <!-- footer section  -->
+    <footer class="footer footer-center p-10 bg-black text-primary-content mt-10">
+        <div class="container mx-auto ">
+            <div class="navbar-center">
+                <button class="flex  justify-center items-center gap-4">
+                    <img class="w-14 lg:w-[54px]" src="./images/logo.png" alt="#" />
+                    <h2 class="font-bold  text-3xl text-white md:text-white">
+                        Fruit Burst
+                    </h2>
+                </button>
+            </div>
+            <ul class="menu menu-horizontal px-1 hover:text-white text-white text-lg font-medium">
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+            </ul>
+        </div> 
+        <div>
+          <div class="grid grid-flow-col gap-4 text-white">
+            <i class="fa-brands fa-facebook text-3xl cursor-pointer"></i>
+            <i class="fa-brands fa-youtube text-3xl cursor-pointer"></i>
+            <i class="fa-brands fa-twitter text-3xl cursor-pointer"></i>
+            <i class="fa-brands fa-tiktok text-3xl cursor-pointer"></i>
+            <i class="fa-brands fa-apple text-3xl cursor-pointer"></i>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
