why chose us section added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
 
 <head>
     <meta charset="UTF-8" data-theme="light,">
@@ -196,6 +196,11 @@
             </div>
         </div>
 
+        <!-- siler bottom product section  -->
+        <div>
+
+        </div>
+
     </header>
 
     <!-- main section  -->
@@ -219,7 +224,7 @@
                         </p>
                     </div>
                     <!-- countdown section -->
-                    <div class="grid grid-flow-col gap-5 text-center auto-cols-max mt-5 ">
+                    <div class="grid grid-flow-col gap-5 text-center font-bold auto-cols-max mt-5 ">
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-5xl">
                                 <span style="--value:15;"></span>
@@ -600,11 +605,127 @@
             </div>
         </section>
 
+        <!-- Why Choose Us -->
+        <section class="container mx-auto my-20">
+            <h2 class="text-primary-head text-5xl font-extrabold text-center">Why Chose Us</h2>
+            <p class=" mt-6 mb-12 text-secondary-text text-base font-medium max-w-[615px] mx-auto text-center">
+                Contrary to popular belief, is not simply random text. It has roots in
+                a piece of classical Latin literature from 45 BC, making it over 2000
+                years old.
+            </p>
+            <!-- why chose us main content -->
+            <div class="grid gap-6 grid-cols-1 lg:grid-cols-3  items-center">
+                <div class="order-1 space-y-6 ">
+                    <div class="flex flex-col lg:flex-row  items-center  gap-6">
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#1212121A] rounded-full p-5">
+                            <i class=" text-2xl fa-solid fa-users"></i>
+                        </div>
+                        <div class="text-center lg:text-start">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5">Dedicated Team</h3>
+                            <div class="flex justify-center lg:justify-start">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col lg:flex-row items-center  gap-6">
+
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#12121219] rounded-full p-5">
+                            <i class="text-2xl  fa-solid fa-gifts"></i>
+                        </div>
+                        <div class="text-center lg:text-start">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5">Fresh is Best</h3>
+                            <div class="flex justify-center lg:justify-start">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row items-center  gap-6">
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#12121219] rounded-full p-5">
+                            <i class="text-2xl  fa-regular fa-heart"></i>
+                        </div>
+                        <div class="text-center lg:text-start">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5">Gift Certificates
+                            </h3>
+                            <div class="flex justify-center lg:justify-start">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="order-first lg:order-2 mx-auto">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <div class="order-3 space-y-6 ">
+                    <div class="flex flex-col lg:flex-row-reverse items-center  gap-6">
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#12121219] rounded-full p-5">
+                            <i class="text-2xl fa-solid fa-apple-whole"></i>
+
+                        </div>
+                        <div class=" text-center  lg:text-right">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5 ">Integrated
+                                Supplier</h3>
+                            <div class="flex justify-center lg:justify-end ">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row-reverse items-center  gap-6">
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#12121219] rounded-full p-5">
+                            <i class="text-2xl fa-solid fa-ice-cream"></i>
+                        </div>
+                        <div class=" text-center  lg:text-right">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5 ">Sustainable
+                                Practice</h3>
+                            <div class="flex justify-center lg:justify-end ">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row-reverse items-center  gap-6">
+
+                        <div
+                            class=" w-[60px] h-[60px] flex items-center justify-center  bg-[#12121219] rounded-full p-5">
+                            <i class="text-2xl fa-solid fa-thumbs-up"></i>
+                        </div>
+
+
+
+                        <div class=" text-center  lg:text-right">
+                            <h3 class="mt-6 lg:mt-12 text-primary-head text-2xl font-extrabold mb-5 ">The Benefits Only
+                            </h3>
+                            <div class="flex justify-center lg:justify-end ">
+                                <hr class="mb-4 w-[20%] h-[3px] bg-[#121212CC]">
+                            </div>
+                            <p class=" text-base text-secondary-text font-medium max-w-[354px]">Professional employees
+                                are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
     <!-- footer section  -->
-    <footer class="footer footer-center p-10 bg-black text-primary-content mt-10">
+    <footer class="footer footer-center p-10 bg-black text-primary-content py-16">
         <div class="container mx-auto ">
             <div class="navbar-center">
                 <button class="flex  justify-center items-center gap-4">
@@ -622,17 +743,17 @@
                 <li><a>Home</a></li>
                 <li><a>About Us</a></li>
             </ul>
-        </div> 
-        <div>
-          <div class="grid grid-flow-col gap-4 text-white">
-            <i class="fa-brands fa-facebook text-3xl cursor-pointer"></i>
-            <i class="fa-brands fa-youtube text-3xl cursor-pointer"></i>
-            <i class="fa-brands fa-twitter text-3xl cursor-pointer"></i>
-            <i class="fa-brands fa-tiktok text-3xl cursor-pointer"></i>
-            <i class="fa-brands fa-apple text-3xl cursor-pointer"></i>
-          </div>
         </div>
-      </footer>
+        <div>
+            <div class="grid grid-flow-col gap-4 text-white">
+                <i class="fa-brands fa-facebook text-3xl cursor-pointer"></i>
+                <i class="fa-brands fa-youtube text-3xl cursor-pointer"></i>
+                <i class="fa-brands fa-twitter text-3xl cursor-pointer"></i>
+                <i class="fa-brands fa-tiktok text-3xl cursor-pointer"></i>
+                <i class="fa-brands fa-apple text-3xl cursor-pointer"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
