--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <script src="https://kit.fontawesome.com/5651c7b9d9.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="sm:px-6">
 
     <!-- Header and nav menu design  -->
-    <header class="container mx-auto">
-        <nav class="bg-red-500">
-            <div class="mt-[3.12rem] mb-20 navbar md:bg-primary-text rounded-[600px] md:py-7 md:px-10">
+    <header class="container mx-auto ">
+        <nav class="bg-white md:bg-red-500 lg:bg-red-500 rounded-[500px]">
+            <div class=" lg:mt-[3.12rem] lg:mb-20 navbar md:bg-primary-text rounded-[600px] md:py-7 md:px-10 md:my-5">
                 <div class="navbar-start hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1 text-white text-lg font-medium">
+                    <ul class="menu menu-horizontal px-1 text-white text-lg font-bold">
                         <li><a>Home</a></li>
                         <li><a>About Us</a></li>
                         <li><a>Shop</a></li>
@@ -31,7 +31,8 @@
                 <div class="navbar-center">
                     <button class="flex items-center gap-4">
                         <img class="w-14 lg:w-[54px]" src="./images/logo.png" alt="#" />
-                        <h2 class="font-bold text-[2.5rem] text-black md:text-white">
+                        <h2
+                            class="font-bold text-lg md:text-3xl lg:hidden xl:block xl:font-extrabold xl:text-3xl text-black md:text-white lg:text-white ">
                             Fruit Burst
                         </h2>
                     </button>
@@ -49,7 +50,7 @@
                             <li><a class="text-lg">All Fruits</a></li>
 
                             <div class="flex gap-1 bg-white ">
-                                <input type="text" class="outline-slate-600 px-3 w-4/5  py-5  text-primary-input"
+                                <input type="text" class="outline-slate-600 px-3 md:w-3/5  py-5  text-primary-input"
                                     placeholder="Search here" />
                                 <button>
                                     <i class=" text-xl fa-solid fa-magnifying-glass"></i>
@@ -78,7 +79,7 @@
                     class="carousel-item relative w-full bg-[url('./images/banner1.png')] bg-cover bg-no-repeat rounded-lg">
                     <div
                         class="hero-overly w-full bg-gradient-to-b from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
-                        <!-- slide content -->
+                        <!-- slider content -->
                         <div class="hero-content text-center px-[46px] md:mx-5">
                             <div class="w-full">
                                 <h1 class="text-2xl lg:text-7xl text-white font-extrabold">
@@ -108,7 +109,7 @@
                     class="carousel-item relative w-full bg-[url('./images/banner2.png')] bg-cover bg-no-repeat rounded-lg">
                     <div
                         class="hero-overly w-full bg-gradient-to-b from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
-                        <!-- slide content -->
+                        <!-- slider content -->
                         <div class="hero-content text-center px-[46px] md:mx-5">
                             <div class="w-full">
                                 <h1 class="text-2xl lg:text-7xl text-white font-extrabold">
@@ -138,7 +139,7 @@
                     class="carousel-item relative w-full bg-[url('./images/banner3.png')] bg-cover bg-no-repeat rounded-lg">
                     <div
                         class="hero-overly w-full bg-gradient-to-b from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
-                        <!-- slide content -->
+                        <!-- slider content -->
                         <div class="hero-content text-center px-[46px] md:mx-5">
                             <div class="w-full">
                                 <h1 class="text-2xl lg:text-7xl text-white font-extrabold">
@@ -168,7 +169,7 @@
                     class="carousel-item relative w-full bg-[url('./images/banner4.png')] bg-cover bg-no-repeat rounded-lg">
                     <div
                         class="hero-overly w-full bg-gradient-to-b from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
-                        <!-- slide content -->
+                        <!-- slider content -->
                         <div class="hero-content text-center px-[46px] md:mx-5">
                             <div class="w-full">
                                 <h1 class="text-2xl lg:text-7xl text-white font-extrabold">
@@ -197,15 +198,36 @@
         </div>
 
         <!-- siler bottom product section  -->
-        <div>
-
+        <div class=" hidden -mt-24  md:hidden lg:block relative">
+            <div class=" p-8 w-3/4 mx-auto flex justify-around items-center rounded-lg  -mt-30 bg-white shadow-lg  ">
+                <div class="text-center">
+                    <img src="./images/fruit1.png" alt="">
+                    <p>Strawberry</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit2.png" alt="">
+                    <p>Orange</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit3.png" alt="">
+                    <p>Mango</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit4.png" alt="">
+                    <p>Strawberry</p>
+                </div>
+                <div class="text-center">
+                    <img src="./images/fruit5.png" alt="">
+                    <p>Mango</p>
+                </div>
+            </div>
         </div>
 
     </header>
 
     <!-- main section  -->
 
-    <main>
+    <main class="">
         <!-- Deal of the day section -->
         <section class="my-6 md:my-[140px] container mx-auto">
             <!-- Deal of the day container  -->
@@ -735,16 +757,16 @@
                     </h2>
                 </button>
             </div>
-            <ul class="menu menu-horizontal px-1 hover:text-white text-white text-lg font-medium">
+            <ul class="menu menu-horizontal px-1  text-white text-lg font-medium">
                 <li><a>Home</a></li>
                 <li><a>About Us</a></li>
                 <li><a>Shop</a></li>
                 <li><a>All Fruits</a></li>
-                <li><a>Home</a></li>
-                <li><a>About Us</a></li>
+                <li><a>Service</a></li>
+                <li><a>Contact</a></li>
             </ul>
         </div>
-        <div>
+        <div class="">
             <div class="grid grid-flow-col gap-4 text-white">
                 <i class="fa-brands fa-facebook text-3xl cursor-pointer"></i>
                 <i class="fa-brands fa-youtube text-3xl cursor-pointer"></i>
