--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div id="slide1"
                     class="carousel-item relative w-full bg-[url('./images/banner1.png')] bg-cover bg-no-repeat rounded-lg">
                     <div
-                        class="hero-overly w-full bg-gradient-to-b from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
+                        class="hero-overly w-full bg-gradient-to-t from-[#121212] to-[#12121200] rounded-lg flex justify-center items-start pt-20">
                         <!-- slider content -->
                         <div class="hero-content text-center px-[46px] md:mx-5">
                             <div class="w-full">
@@ -322,7 +322,7 @@
                                             checked />
                                     </div>
                                     <div class="modal-action justify-center gap-[32px]">
-                                        <!-- if there is a button in form, it will close the modal -->
+                                        <!-- modal button  -->
                                         <button
                                             class="py-5 px-[30px]  text-xl font-extrabold rounded-lg border border-primary-text text-primary-text hover:text-white hover:bg-[#F85559] ">Close</button>
                                         <button
@@ -757,7 +757,7 @@
                     </h2>
                 </button>
             </div>
-            <ul class="menu menu-horizontal px-1  text-white text-lg font-medium">
+            <ul class="menu menu-horizontal  items-center text-white text-lg font-medium ">
                 <li><a>Home</a></li>
                 <li><a>About Us</a></li>
                 <li><a>Shop</a></li>
@@ -767,7 +767,7 @@
             </ul>
         </div>
         <div class="">
-            <div class="grid grid-flow-col gap-4 text-white">
+            <div class="grid grid-flow-col gap-4 lg:gap-10 text-white">
                 <i class="fa-brands fa-facebook text-3xl cursor-pointer"></i>
                 <i class="fa-brands fa-youtube text-3xl cursor-pointer"></i>
                 <i class="fa-brands fa-twitter text-3xl cursor-pointer"></i>
