--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Fruit Brust</title>
     <!-- CSS File liked  -->
     <link rel="stylesheet" href="./style.css">
+    <!-- FavIcon  -->
+    <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <!-- Tailwind And DaisyUI CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -747,7 +749,7 @@
 
 
     <!-- footer section  -->
-    <footer class="footer footer-center p-10 bg-black text-primary-content py-16">
+    <footer class="footer footer-center w-full bg-black text-primary-content py-16">
         <div class="container mx-auto ">
             <div class="navbar-center">
                 <button class="flex  justify-center items-center gap-4">
